# pg_monitor

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  main.py  main_collector.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260310_01_create_query_metric_snapshots.py  20260311_01_add_runtime_storage_tables.py  20260320_01_upgrade_query_metric_counters_to_bigint.py
docker/: README.md
docker/alertmanager/: alertmanager.example.yml
docker/app/: Dockerfile
docker/compose/: compose.yaml
docker/env/: .env.docker.example
docker/grafana/dashboards/: overview.json  query-analytics.json  service-metrics.json
docker/loki/: loki.yml
docker/postgres/init/: 01-create-databases.sh
docker/prometheus/: alerts.yml  prometheus.yml
docker/promtail/: promtail.yml
docs/: architecture.md  iteration-1-plan.md  iteration-2-architecture.md  iteration-2-plan.md  iteration-3-architecture.md  iteration-3-plan.md  iteration-4-architecture.md  iteration-4-plan.md  logging-correlation.md  mvp-spec.md  roadmap.md  working-agreement.md
src/pg_monitor/: __init__.py  app.py
src/pg_monitor/api/: __init__.py  exceptions.py  metrics.py  middleware.py  query_analytics.py
src/pg_monitor/collector/: __init__.py  errors.py  models.py  queries.py  repository.py  scheduler.py  service.py  worker.py
src/pg_monitor/config/: __init__.py  settings.py
src/pg_monitor/logging/: __init__.py  context.py  structured.py
src/pg_monitor/metrics/: __init__.py  api_service_metrics.py  prometheus_exporter.py  runtime_models.py  runtime_service.py
src/pg_monitor/providers/: __init__.py  api.py  collector.py
src/pg_monitor/query_analytics/: __init__.py  delta.py  errors.py  models.py  (+1 more)
tests/: conftest.py  test_app_scheduler.py  test_collector_integration.py  test_health.py  test_logging_context.py  test_settings.py
tests/api/: test_health.py  test_metrics.py  test_query_analytics.py
tests/app/: test_scheduler_wiring.py
tests/integration/: test_collector_postgres.py  test_query_analytics_flow.py  test_runtime_metrics_flow.py
tools/load-sim/: README.md  common.sh  http-burst.sh  lock-holder.sh  lock-waiter.sh  query-burst.sh  setup.sh
(+25 files in other folders)
