[project]
name = "pg-monitor"
version = "0.1.0"
description = "PostgreSQL monitoring exporter and analytics service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 80
exclude = [
    ".venv",
    ".git",
]

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "YTT", "ASYNC", "T10", "DJ", "EXE", "FA", "ISC",
    "ICN", "LOG", "PYI", "Q", "SLOT", "TID", "TC", "INT", "PD", "PLE",
    "FLY", "NPY", "AIR", "FURB",
]
ignore = ["ISC001"]
