[project]
name = "pg-monitor"
version = "0.1.0"
description = "PostgreSQL monitoring exporter and analytics service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "alembic>=1.18.0",
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.30.0",
    "dishka>=1.9.1",
]

[project.scripts]
pg-monitor-collector = "pg_monitor.collector.worker:run"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "testcontainers[postgres]>=4.8.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require external services (Docker/PostgreSQL)",
]

[tool.ruff]
line-length = 80
exclude = [
    ".venv",
    ".git",
]

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "YTT", "ASYNC", "T10", "DJ", "EXE", "FA", "ISC",
    "ICN", "LOG", "PYI", "Q", "SLOT", "TID", "TC", "INT", "PD", "PLE",
    "FLY", "NPY", "AIR", "FURB",
]
ignore = ["ISC001"]
